tests/fail/etki-yazmak.kip
yapmak, 1'dir.

yapmayı yaz.
